# Big-Pi

./: Big Pi.slnx  Big Pi.vcxproj  CMakeLists.txt
App/: main.cpp
Docs/: Manifest.txt  RoadMap.txt
Source/: Dsp.h  OutputStage.h  ReverbEngine.h
Source/Modes/: ModePresets.cpp
Source/ReverbCore/: Matrices.cpp  Matrices.h  Tank.h  TapPatterns.cpp
apps/pedal_host/: main.cpp
docs/: Checklist.md  RoadMap.txt
src/core/: Version.h
src/dsp/common/: Dsp.h
src/dsp/diffusion/: Diffusion.cpp  Diffusion.h
src/dsp/engines/diffusion/: Diffusion.h
src/dsp/engines/modes/: ModePresets.h
src/dsp/engines/tune hall/: EarlyReflections.cpp  OutputStage.cpp
src/dsp/engines/tune_hall/: EarlyReflections.cpp  EarlyReflections.h  OutputStage.cpp  OutputStage.h  ReverbEngine.cpp  ReverbEngine.h
src/dsp/modes/: ModePresets.cpp  ModePresets.h  Modes.h
src/dsp/tail/: Matrices.cpp  Matrices.h  Tank.cpp  Tank.h  TapPatterns.cpp  TapPatterns.h
